--- a/Portafolio.ipynb
+++ b/Portafolio.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1yiYa5zFvyEFgm5yxNj-V1VY8yDd9SP53",
-      "authorship_tag": "ABX9TyPECqx7GZn4a/IRlbhWDTPI",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNuX4zK4Dnz9ew/yCpVAtB2"
     },
     "kernelspec": {
       "name": "python3",
@@ -19,18 +18,8 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tbetancur/Portfolio/blob/main/Portafolio.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Dropout Prediction and Cohort Analysis"
+        "**#Analysis and Prediction of Player Behavior in iGaming.**"
       ],
       "metadata": {
         "id": "TAcPH7vGmbqb"
